@@ -158,7 +158,7 @@
 	      <property name="update_policy">GTK_UPDATE_ALWAYS</property>
 	      <property name="snap_to_ticks">True</property>
 	      <property name="wrap">False</property>
-	      <property name="adjustment">12 1 1e+06 1 10 10</property>
+	      <property name="adjustment">12 1 1e+05 1 10 10</property>
 	      <signal name="value_changed" handler="on_precision_dialog_spinbutton_precision_value_changed" last_modification_time="Fri, 15 Aug 2003 16:03:38 GMT"/>
 	    </widget>
 	    <packing>
