@@ -1,3 +1,9 @@
+2005-11-29 Niklas Knutsson  <nq@altern.org>
+
+	* Do not display (x)(y)^z with multiplication sign
+	* No double quotes in set unknowns dialog
+	* Set max precision to 100000
+
 2005-11-27 Niklas Knutsson  <nq@altern.org>
 	
 	* Update assumption menu items and combo boxes (in edit unknown variable dialog) 
